// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render control correctly: control renderer 1`] = `
<Control
  className="abs-height-100"
/>
`;

exports[`should render correctly 1`] = `
<SearchSelect
  autoFocus={true}
  className="width-100"
  components={
    {
      "Control": [Function],
      "Option": [Function],
      "SingleValue": [Function],
    }
  }
  defaultOptions={true}
  id="change-profile-permission"
  inputId="change-profile-permission-input"
  isClearable={false}
  large={true}
  loadOptions={[Function]}
  noOptionsMessage={[Function]}
  onChange={[MockFunction]}
  placeholder=""
/>
`;

exports[`should render option correctly: option renderer 1`] = `
<Option
  data={
    {
      "name": "name",
      "value": "test",
    }
  }
>
  <span
    className="display-flex-center"
  >
    <GroupIcon
      size={16}
    />
    <strong
      className="spacer-left"
    >
      name
    </strong>
  </span>
</Option>
`;

exports[`should render value correctly: value renderer 1`] = `
<SingleValue
  data={
    {
      "name": "name",
      "value": "test",
    }
  }
>
  <span
    className="display-flex-center"
  >
    <GroupIcon
      size={16}
    />
    <strong
      className="spacer-left"
    >
      name
    </strong>
  </span>
</SingleValue>
`;
